# Fraud_case

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  util.py
config/: config.yaml
notebooks/: 01_exploratory_analysis.ipynb  02_feature_engineering.ipynb  03_model_evaluation.ipynb  04_hyperparameter_optimization_and_walk_forward.ipynb  utils.py
reports/: best_model_summary.txt  gradient_boosted_trees_feature_importance.csv  lightgbm_feature_importance.csv  model_evaluation_results.csv  random_forest_feature_importance.csv  xgboost_feature_importance.csv
scripts/: evaluate_models.py  explain_model.py  prepare_data.py  train_models.py  tune_lightgbm.py
src/: preprocessing.py
src/fraud_case/: config.py
src/fraud_case/data/: balance.py  loader.py
src/fraud_case/features/: engineering.py  pipeline.py
src/fraud_case/models/: evaluate.py  explain.py  train.py
src/fraud_case/utils/: datetime_features.py  geo.py  io.py  plotting.py
tests/: conftest.py  test_datetime_features.py  test_digit_features.py  test_geo.py  test_no_leakage.py  test_smoke_real_data.py  test_target_encoder.py
